--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="there_are_nobody">Тут никого нет</string>
     <string name="how_to_search">Введите имя пользователя GitHub в строке поиска</string>
     <string name="empty_list_image">Empty list image</string>
+    <string name="title_activity_user_info">UserInfoActivity</string>
+
 </resources>
